force-app/main/default/objects/Send_SMS_From_SenderId__mdt/Send_SMS_From_SenderId__mdt.object-meta.xml
<CustomObject>
    <label>DFJ Send SMS From SenderId</label>
    <pluralLabel>DFJ Send SMS From SenderIds</pluralLabel>
</CustomObject>