force-app/main/default/objects/Send_SMS_From_SenderId__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <label>Account SID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>