force-app/main/default/objects/Send_SMS_From_SenderId__mdt/fields/Alphanumeric_Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Alphanumeric_Sender_ID__c</fullName>
    <label>Alphanumeric Sender ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>