force-app/main/default/objects/Send_SMS_From_SenderId__mdt/fields/Messaging_Service_Sid__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Service_Sid__c</fullName>
    <label>Messaging Service Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>